--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: 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
+          personal_token: ${{ MY_SECRET_NAME }}
           publish_dir: ./build
