--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ MY_SECRET_NAME }}
+          personal_token: ${{ secrets.MY_SECRET_NAME }}
           publish_dir: ./build
